--- a/styles.css
+++ b/styles.css
@@ -367,3 +367,13 @@ h4{
 .a-box.hidden {
     display: block;
 }
+
+.name{
+    font-size: 9px;
+    color: rgba(255, 255, 255, 0.834);
+    opacity: 0.7;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    
+}
